--- a/ali.html
+++ b/ali.html
@@ -6,6 +6,7 @@
     <title>gitme</title>
 </head>
 <body>
+    <p id="bus-submission"> <span>در <span style="text-decoration:underline;">پر بازدیدترین</span> سایت استان خوزستان</span> <a href="https://kareshoma.com/%d8%aa%d8%a8%d9%84%db%8c%d8%ba%d8%a7%d8%aa-%d8%af%d8%b1-%d8%a7%d9%87%d9%88%d8%a7%d8%b2/" target="_blank"><span class="autozoom" style="display:inline-block; color:#c40808; margin-right:-10px">شغلت رو تبلیغ کن ...!</span></a></p>
     
     <h1>love</h1>
 
